# GraphicsPlayground

Basic/: .gitignore  CMakeLists.txt  main.cpp  shader.hpp
Basic/shaders/: shader.fs  shader.vs
Basic/src/: shader.hpp
lib/: glad.c
